fix(menu): change z-index so that it is always on top

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,7 @@
   width: 100%;
   box-shadow: 2px 0px 20px rgba(0, 0, 0, 0.15);
   background-color: #fff;
+  z-index: 1;
 }
 
 .app-main-content {
